# MyTxAnalyzer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_performance_exports_diagrams.py  0003_network_type_sui.py  0004_workflow_runs.py
backend/app/: main.py
backend/app/api/: cases.py  evidence.py  findings.py  networks.py  reports.py
backend/app/core/: config.py  database.py  logging.py  object_store.py  public_rpc.py  security.py
backend/app/models/: db.py  report_quality.py  schemas.py
backend/app/services/: case_service.py  claim_builder_service.py  diagram_service.py  evidence_parser_service.py  evidence_service.py  finding_service.py  job_service.py  network_service.py  report_export_service.py  report_quality_service.py  report_renderer_playbooks.py  report_renderer_registry.py  report_service.py  txanalyzer_runtime_service.py  workflow_run_service.py
backend/app/workers/: acl_forensics_worker.py  decode_worker.py  environment_check_worker.py  fund_flow_worker.py  loss_calculator_worker.py  rca_agent_worker.py  report_worker.py  safe_forensics_worker.py  tx_discovery_worker.py  txanalyzer_worker.py
backend/app/workflows/: case_analysis_workflow.py  case_runner.py  (+1 more)
backend/tests/: conftest.py  test_api.py  test_claim_builder_service.py  test_enhancements.py  test_object_store.py  test_report_quality_api.py  test_report_quality_service.py  test_report_service_quality_integration.py  test_txanalyzer_worker.py
(+78 files in other folders)
