[project]
name = "onchain-rca-workbench-backend"
version = "0.1.0"
description = "Post-incident on-chain RCA workbench backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "boto3>=1.34",
  "web3>=6.15",
  "eth-account>=0.11",
  "eth-keys>=0.5",
  "temporalio>=1.5",
  "python-dotenv>=1.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
